# biblical_calendar_app

./: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.simple  Dockerfile.web  README.md  RELEASE_NOTES.md  check_weekday.py  debug_dates.py  debug_moon.py  pyproject.toml  test_web_api.py
.amazonq/rules/: datametria_std_documentation.md  template-code-review.md  template-project-kickoff.md  template-project-status-report.md  template-technical-specification.md
docs/: README.md  changelog.md  product-backlog.md
docs/api/: api-reference.md
docs/releases/: v1.1.0-release-notes.md.md  v1.2.0-release-notes.md  v2.0.0-release-notes.md
docs/technical/: architecture.md  ephemeris-management.md  web-architecture.md
docs/user-guide/: chronologies-guide.md  installation-guide.md  product-guide.md  user-manual.md
src/biblical_calendar/: __init__.py  calendar.py  calendar_core.py
tests/: __init__.py  test_calendar.py
web/: .dockerignore  Dockerfile  Dockerfile.render  README.md  build-frontend.bat  build-frontend.sh  build.bat  build.sh  deploy-fix.md  deploy-render.md  nginx-production.conf  production-deploy.md  render.yaml  server.py
web/backend/: app.py  requirements.txt  run.py  setup_env.bat  setup_env.sh  start.bat  start.sh  test_import.py
web/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
web/frontend/: index.html  package-lock.json  package.json  start.bat  start.sh  vite.config.js
web/frontend/src/: App.vue
web/static/: index-DGJdu1eI.css  index.html
web/static/assets/: index-Nyhhb0oR.js
